working on filtering next

--- a/data_cleaning/Untitled.ipynb
+++ b/data_cleaning/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"master_df.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -84,98 +93,134 @@
        "4  Afghanistan        F2       1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"master_df.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>country</th>\n",
-       "      <th>visa_type</th>\n",
-       "      <th>number</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>142183</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>G1</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>142184</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>G4</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>142185</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>J1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>142186</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>K1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>142187</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>M1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "         country visa_type  number\n",
-       "142183  Zimbabwe        G1      11\n",
-       "142184  Zimbabwe        G4      13\n",
-       "142185  Zimbabwe        J1       2\n",
-       "142186  Zimbabwe        K1       1\n",
-       "142187  Zimbabwe        M1       1"
+       "['A1',\n",
+       " 'A2',\n",
+       " 'B1',\n",
+       " 'B1/B2',\n",
+       " 'F2',\n",
+       " 'G2',\n",
+       " 'G4',\n",
+       " 'H4',\n",
+       " 'J1',\n",
+       " 'J2',\n",
+       " 'K1',\n",
+       " 'C1/D',\n",
+       " 'E2',\n",
+       " 'F1',\n",
+       " 'H1B',\n",
+       " 'L1',\n",
+       " 'M1',\n",
+       " 'P1',\n",
+       " 'P3',\n",
+       " 'B2',\n",
+       " 'D',\n",
+       " 'L2',\n",
+       " 'O1',\n",
+       " 'G1',\n",
+       " 'C3',\n",
+       " 'H2B',\n",
+       " 'C1',\n",
+       " 'E1',\n",
+       " 'I',\n",
+       " 'K2',\n",
+       " 'M2',\n",
+       " 'O2',\n",
+       " 'O3',\n",
+       " 'P4',\n",
+       " 'R1',\n",
+       " 'R2',\n",
+       " 'TD',\n",
+       " 'E3',\n",
+       " 'E3D',\n",
+       " 'E3R',\n",
+       " 'H2A',\n",
+       " 'H3',\n",
+       " 'A3',\n",
+       " 'CW2',\n",
+       " 'G3',\n",
+       " 'NATO1',\n",
+       " 'NATO2',\n",
+       " 'NATO4',\n",
+       " 'NATO6',\n",
+       " 'Q1',\n",
+       " 'U3',\n",
+       " 'C2',\n",
+       " 'G5',\n",
+       " 'TN',\n",
+       " 'H1B1',\n",
+       " 'CW1',\n",
+       " 'E2C',\n",
+       " 'U2',\n",
+       " 'U1',\n",
+       " 'U5',\n",
+       " 'P2',\n",
+       " 'T3',\n",
+       " 'U4',\n",
+       " 'T2',\n",
+       " 'T6',\n",
+       " 'K3',\n",
+       " 'K4',\n",
+       " 'T5',\n",
+       " 'NATO5',\n",
+       " 'N8',\n",
+       " 'SudanA1',\n",
+       " 'SudanA3',\n",
+       " 'SudanB1',\n",
+       " 'SudanB1/B2',\n",
+       " 'SudanB2',\n",
+       " 'SudanD',\n",
+       " 'SudanF1',\n",
+       " 'SudanG1',\n",
+       " 'SudanG2',\n",
+       " 'SudanG4',\n",
+       " 'SudanH1B',\n",
+       " 'SudanH4',\n",
+       " 'SudanI',\n",
+       " 'SudanJ1',\n",
+       " 'SudanK1',\n",
+       " 'NATO7',\n",
+       " 'T4',\n",
+       " 'BBBCC',\n",
+       " 'BBBCV',\n",
+       " 'November',\n",
+       " 'December',\n",
+       " 'January',\n",
+       " 'H1C',\n",
+       " 'February',\n",
+       " 'March',\n",
+       " 'April',\n",
+       " 'N9',\n",
+       " 'May',\n",
+       " 'June',\n",
+       " 'July',\n",
+       " 'August',\n",
+       " 'S7']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.tail()"
+    "list(df['visa_type'].unique())"
    ]
   },
   {
@@ -183,7 +228,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['visa_type']"
+   ]
   }
  ],
  "metadata": {
