--- a/data_cleaning/Untitled.ipynb
+++ b/data_cleaning/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,216 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"master_df.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>country</th>\n",
-       "      <th>visa_type</th>\n",
-       "      <th>number</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>A1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>A2</td>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>B1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>B1/B2</td>\n",
-       "      <td>87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>F2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       country visa_type  number\n",
-       "0  Afghanistan        A1      14\n",
-       "1  Afghanistan        A2      42\n",
-       "2  Afghanistan        B1       1\n",
-       "3  Afghanistan     B1/B2      87\n",
-       "4  Afghanistan        F2       1"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['A1',\n",
-       " 'A2',\n",
-       " 'B1',\n",
-       " 'B1/B2',\n",
-       " 'F2',\n",
-       " 'G2',\n",
-       " 'G4',\n",
-       " 'H4',\n",
-       " 'J1',\n",
-       " 'J2',\n",
-       " 'K1',\n",
-       " 'C1/D',\n",
-       " 'E2',\n",
-       " 'F1',\n",
-       " 'H1B',\n",
-       " 'L1',\n",
-       " 'M1',\n",
-       " 'P1',\n",
-       " 'P3',\n",
-       " 'B2',\n",
-       " 'D',\n",
-       " 'L2',\n",
-       " 'O1',\n",
-       " 'G1',\n",
-       " 'C3',\n",
-       " 'H2B',\n",
-       " 'C1',\n",
-       " 'E1',\n",
-       " 'I',\n",
-       " 'K2',\n",
-       " 'M2',\n",
-       " 'O2',\n",
-       " 'O3',\n",
-       " 'P4',\n",
-       " 'R1',\n",
-       " 'R2',\n",
-       " 'TD',\n",
-       " 'E3',\n",
-       " 'E3D',\n",
-       " 'E3R',\n",
-       " 'H2A',\n",
-       " 'H3',\n",
-       " 'A3',\n",
-       " 'CW2',\n",
-       " 'G3',\n",
-       " 'NATO1',\n",
-       " 'NATO2',\n",
-       " 'NATO4',\n",
-       " 'NATO6',\n",
-       " 'Q1',\n",
-       " 'U3',\n",
-       " 'C2',\n",
-       " 'G5',\n",
-       " 'TN',\n",
-       " 'H1B1',\n",
-       " 'CW1',\n",
-       " 'E2C',\n",
-       " 'U2',\n",
-       " 'U1',\n",
-       " 'U5',\n",
-       " 'P2',\n",
-       " 'T3',\n",
-       " 'U4',\n",
-       " 'T2',\n",
-       " 'T6',\n",
-       " 'K3',\n",
-       " 'K4',\n",
-       " 'T5',\n",
-       " 'NATO5',\n",
-       " 'N8',\n",
-       " 'SudanA1',\n",
-       " 'SudanA3',\n",
-       " 'SudanB1',\n",
-       " 'SudanB1/B2',\n",
-       " 'SudanB2',\n",
-       " 'SudanD',\n",
-       " 'SudanF1',\n",
-       " 'SudanG1',\n",
-       " 'SudanG2',\n",
-       " 'SudanG4',\n",
-       " 'SudanH1B',\n",
-       " 'SudanH4',\n",
-       " 'SudanI',\n",
-       " 'SudanJ1',\n",
-       " 'SudanK1',\n",
-       " 'NATO7',\n",
-       " 'T4',\n",
-       " 'BBBCC',\n",
-       " 'BBBCV',\n",
-       " 'November',\n",
-       " 'December',\n",
-       " 'January',\n",
-       " 'H1C',\n",
-       " 'February',\n",
-       " 'March',\n",
-       " 'April',\n",
-       " 'N9',\n",
-       " 'May',\n",
-       " 'June',\n",
-       " 'July',\n",
-       " 'August',\n",
-       " 'S7']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(df['visa_type'].unique())"
+    "df = pd.read_csv(\"master_df.csv\", index_col = 'date')"
    ]
   },
   {
@@ -229,8 +24,161 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['visa_type']"
+    "df.reset_index(inplace = True) # convert index column:date to regular column:date"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['date']=pd.to_datetime(df['date']) # convert datatype from string to datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['year'] = pd.DatetimeIndex(df['date']).year # extract year numbner\n",
+    "df['month'] = pd.DatetimeIndex(df['date']).month # extract month number\n",
+    "df['month'] = pd.to_datetime(df['month'], format='%m').dt.month_name() # convert month number to month name\n",
+    "df['month'] = df['month'].str.lower() # lower case month names for consistency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.tail()dd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.set_index('date', inplace = True) # assign column:date as index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "returned_country = 'Afghanistan'\n",
+    "returned_visa_type = 'A2'\n",
+    "returned_month = 'march'\n",
+    "returned_year = '2017'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = df[(df['country'] == returned_country) & (df['visa_type'] == returned_visa_type) & (df['month'] == returned_month) & (df['year']==int(returned_year))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    result = result['number'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'result' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-0ac921c19f1a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mresult\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'result' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "master_df = pd.read_csv('master_df.csv', index_col='date')\n",
+    "# Filtering data from master_df\n",
+    "# - creating columns year and month out of the date index\n",
+    "master_df.reset_index(inplace=True)  # convert index column:date to regular column:date\n",
+    "master_df['date'] = pd.to_datetime(master_df['date'])  # convert datatype from string to datetime\n",
+    "master_df['year'] = pd.DatetimeIndex(master_df['date']).year  # extract year numbner\n",
+    "master_df['month'] = pd.DatetimeIndex(master_df['date']).month  # extract month number\n",
+    "master_df['month'] = pd.to_datetime(master_df['month'],\n",
+    "                                    format='%m').dt.month_name()  # convert month number to month name\n",
+    "master_df['month'] = master_df['month'].str.lower()  # lower case month names for consistency\n",
+    "master_df.set_index('date', inplace=True)  # assign column:date as index\n",
+    "\n",
+    "# - actual filtering\n",
+    "result = master_df[(master_df['country'] == returned_country) &\n",
+    "                   (master_df['visa_type'] == returned_visa_type) &\n",
+    "                   (master_df['month'] == returned_month) &\n",
+    "                   (master_df['year'] == int(returned_year))]\n",
+    "result = result['number'].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
