pdf_downloader.py refactored

--- a/data_cleaning/masterdf.ipynb
+++ b/data_cleaning/masterdf.ipynb
@@ -13,6 +13,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "filename = 'APRIL%202017%20-%20NIV%20Issuances%20by%20Nationality%20and%20Visa%20Class'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'APRIL%202017'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subtract =  '%20-%20NIV%20Issuances%20by%20Nationality%20and%20Visa%20Class'\n",
+    "filename = filename.replace(subtract, '')\n",
+    "filename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import datetime as dt"
    ]
@@ -48,8 +79,14 @@
     "\n",
     "# 2) missing months:\n",
     "\n",
-    "# drop jan2017 and feb 2017 because fiscal year starts March\n",
-    "# drop nov 2020 & dec 2020 because origin website has not updated yet\n",
+    "# drop \n",
+    "# - jan2017 and feb 2017 \n",
+    "# - - because fiscal year starts March\n",
+    "\n",
+    "# drop \n",
+    "# - nov 2020 & dec 2020 \n",
+    "# - - because origin website has not updated yet\n",
+    "\n",
     "file_names = file_names[2:-2]  # omitting first 2 elements and the last 2 element\n",
     "\n",
     "# fix indices\n",
