df_list.py refactored

--- a/data_cleaning/masterdf.ipynb
+++ b/data_cleaning/masterdf.ipynb
@@ -9,12 +9,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'APRIL%202017%20-%20NIV%20Issuances%20by%20Nationality%20and%20Visa%20Class'"
+    "# Generating names of all pdf files starting March 2017 until current month -1.\n",
+    "\n",
+    "# libraries\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "\n",
+    "currentDay = datetime.now().day\n",
+    "currentMonth = datetime.now().month\n",
+    "currentYear = datetime.now().year\n",
+    "\n",
+    "# ---------------------------------------------------------------------#\n",
+    "\n",
+    "years = list(range(s_year, e_year + 1))  # e_year +1 because range is non inclusive of the ending number\n",
+    "months = ['january', 'february', 'march', 'april', 'may', 'june', 'july',\n",
+    "          'august', 'september', 'october', 'november', 'december']\n",
+    "\n",
+    "s_year = 2017\n",
+    "s_month = 'March'  # fiscal year starts on march\n",
+    "\n",
+    "e_year = currentYear\n",
+    "e_month = months[currentMonth- 3] # two months back + 0 indexing: total = -3\n",
+    "\n",
+    "# ---------------------------------------------------------------------#\n",
+    "\n",
+    "file_names = [] # initialize a empty list of dataframes\n",
+    "\n",
+    "for year in years:\n",
+    "    for month in months:\n",
+    "        file_name = f'{month}_{year}'\n",
+    "        file_names.append(file_name)\n",
+    "        if (year == e_year) and (month == e_month):\n",
+    "            break\n",
+    "\n",
+    "# saving the list:file_names as dict >> DataFrame >> CSV \n",
+    "file_names_dict = {'col1': file_names}\n",
+    "df = pd.DataFrame(file_names_dict)\n",
+    "df.to_csv('file_names.csv', sep=',', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -32,11 +82,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "subtract =  '%20-%20NIV%20Issuances%20by%20Nationality%20and%20Visa%20Class'\n",
-    "filename = filename.replace(subtract, '')\n",
-    "filename"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
