--- a/data_cleaning/masterdf.ipynb
+++ b/data_cleaning/masterdf.ipynb
@@ -8,8 +8,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# df_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### start"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,15 +39,16 @@
     "\n",
     "# ---------------------------------------------------------------------#\n",
     "\n",
+    "s_year = 2017\n",
+    "e_year = currentYear\n",
     "years = list(range(s_year, e_year + 1))  # e_year +1 because range is non inclusive of the ending number\n",
+    "\n",
+    "\n",
     "months = ['january', 'february', 'march', 'april', 'may', 'june', 'july',\n",
     "          'august', 'september', 'october', 'november', 'december']\n",
-    "\n",
-    "s_year = 2017\n",
     "s_month = 'March'  # fiscal year starts on march\n",
-    "\n",
-    "e_year = currentYear\n",
     "e_month = months[currentMonth- 3] # two months back + 0 indexing: total = -3\n",
+    "\n",
     "\n",
     "# ---------------------------------------------------------------------#\n",
     "\n",
@@ -46,10 +61,82 @@
     "        if (year == e_year) and (month == e_month):\n",
     "            break\n",
     "\n",
-    "# saving the list:file_names as dict >> DataFrame >> CSV \n",
+    "# saving the list:file_names as dict >> DataFrame >> CSV\n",
     "file_names_dict = {'col1': file_names}\n",
     "df = pd.DataFrame(file_names_dict)\n",
     "df.to_csv('file_names.csv', sep=',', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>january_2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>february_2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>march_2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>april_2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>may_2017</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            col1\n",
+       "0   january_2017\n",
+       "1  february_2017\n",
+       "2     march_2017\n",
+       "3     april_2017\n",
+       "4       may_2017"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -68,21 +155,367 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_list = pd.read_csv('file_names.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>january_2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>february_2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>march_2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>april_2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>may_2017</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'APRIL%202017'"
+       "            col1\n",
+       "0   january_2017\n",
+       "1  february_2017\n",
+       "2     march_2017\n",
+       "3     april_2017\n",
+       "4       may_2017"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "df_list.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PDF TO CSV 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### START"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pdf_to_csv(input_file, output_file):\n",
+    "    \"\"\"converts PDF to CSV (includes errors handling)\"\"\"\n",
+    "    import tabula\n",
+    "    try:\n",
+    "        tabula.convert_into(input_file, output_file, pages=\"all\")\n",
+    "        print('conversion successful')\n",
+    "    except FileNotFoundError:\n",
+    "        print(f'{input_file} not found')\n",
+    "    print('------------------------')\n",
+    "    return\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "file_names_df = pd.read_csv('file_names.csv')\n",
+    "file_names = file_names_df['col1']  # DataType:Series\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converting january_2017 from pdf_raw to csv_raw\n",
+      "pdf_raw/january_2017.pdf not found\n",
+      "------------------------\n",
+      "Converting february_2017 from pdf_raw to csv_raw\n",
+      "pdf_raw/february_2017.pdf not found\n",
+      "------------------------\n",
+      "Converting march_2017 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting april_2017 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting may_2017 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting june_2017 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting july_2017 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting august_2017 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting september_2017 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting october_2017 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting november_2017 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting december_2017 from pdf_raw to csv_raw\n",
+      "pdf_raw/december_2017.pdf not found\n",
+      "------------------------\n",
+      "Converting january_2018 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting february_2018 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting march_2018 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting april_2018 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting may_2018 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting june_2018 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting july_2018 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting august_2018 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting september_2018 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting october_2018 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting november_2018 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting december_2018 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting january_2019 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting february_2019 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting march_2019 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting april_2019 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting may_2019 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting june_2019 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting july_2019 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting august_2019 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting september_2019 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting october_2019 from pdf_raw to csv_raw\n",
+      "pdf_raw/october_2019.pdf not found\n",
+      "------------------------\n",
+      "Converting november_2019 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting december_2019 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting january_2020 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting february_2020 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting march_2020 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting april_2020 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting may_2020 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting june_2020 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting july_2020 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting august_2020 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting september_2020 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n",
+      "Converting october_2020 from pdf_raw to csv_raw\n",
+      "conversion successful\n",
+      "------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for file_name in file_names:\n",
+    "    #  Converting pdf_raw to csv_raw\n",
+    "    input_file = f'pdf_raw/{file_name}.pdf'\n",
+    "    output_file = f'csv_raw2/{file_name}.csv'\n",
+    "    print(f'Converting {file_name} from pdf_raw to csv_raw')\n",
+    "    pdf_to_csv(input_file=input_file, output_file=output_file)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PDF to CSV 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## END"
+   ]
   },
   {
    "cell_type": "code",
@@ -98,8 +531,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Importing dataframes 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object attribute 'index' is read-only",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-a0cfe2fe15a9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;31m# fix indices\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[0mindices\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_names\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# Datatype: range\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m \u001b[0mfile_names\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindices\u001b[0m           \u001b[1;31m# Assign ^^ to file_names's index\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object attribute 'index' is read-only"
+     ]
+    }
+   ],
+   "source": [
+    "file_names = pd.read_csv('file_names.csv') # a one dimensional(supposedly) list of file names\n",
+    "file_names = file_names['col1']\n",
+    "\n",
+    "\n",
+    "# 1) fixing some inconsistencies in naming conventions (in source data)\n",
+    "\n",
+    "# december2017 not downloaded.  Reason: Typo in source file\n",
+    "# 'Nationality' (correct) is typed 'Nationltity' (incorrect) in the source 11\n",
+    "# - solution: manual\n",
+    "\n",
+    "# october 2019 not downloaded. Reason: Typo in source file\n",
+    "# '202019%20NIV' is typed '202019%20-%20NIV' (incorrect) in the source 33\n",
+    "# - solution: manual\n",
+    "\n",
+    "# september 2020 downloaded. Problem: need to rename for consistency\n",
+    "# 'September' is typed 'sept'(incorrect) in source and local(downloaded) 44\n",
+    "# - solution: manual\n",
+    "\n",
+    "\n",
+    "# 2) missing months:\n",
+    "\n",
+    "# drop \n",
+    "# - jan2017 and feb 2017 \n",
+    "# - - because fiscal year starts March\n",
+    "\n",
+    "file_names = file_names[2]  # omitting first 2 elements\n",
+    "\n",
+    "# fix indices\n",
+    "indices = range(0, len(file_names))  # Datatype: range\n",
+    "file_names.index = indices           # Assign ^^ to file_names's index "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1) Importing dataframes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
